Fix x-overflow issue on blog post citation links (mobile)
- Fixes #294

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -303,5 +303,6 @@
 		font-weight: inherit;
 		color: inherit !important;
 		border: inherit !important;
+		word-break: break-word;
 	}
 }
